@@ -1,5 +1,10 @@
 2017-03-21  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/80032
+	* g++.dg/opt/pr80032.C: New testcase.
+
+2017-03-21  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/80122
 	* gcc.dg/torture/pr80122.c: New testcase.
 
